assets/style/style.css
/* ... */
.section-block {
    text-align: center;
    margin-bottom: 40px;
}

.section-block h2 {
    font-family: "Poppins", sans-serif;
    line-height: 1.1;
    font-size: 48px;
    font-weight: 800;
    margin: 0 auto;
    max-width: 80%;
}

.section-block p {
    font-family: "Inter", sans-serif;
    line-height: 1.5;
    font-size: 16px;
    margin: 20px auto 0;
    max-width: 50%;
}

.intro {
    max-width: 100%;
    text-align: center;
    padding: 20px;
}

.intro__text {
    font-family: "Inter", sans-serif;
    line-height: 1.5;
    font-size: 16px;
    max-width: 738px;
    margin: 0 auto;
}

h1 {
    font-family: "Poppins", sans-serif;
    line-height: 1.1;
    font-size: 48px;
    font-weight: 800;
    text-align: center;
    max-width: 50%;
    margin: 50px auto;
}

/* Контейнер с товарами */
.products {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 20px;
    max-width: 1129px;
    margin: 50px auto;
}

.product {
    text-align: center;
}

.product img {
    width: 100%;
    border-radius: 6px;
}

/* Контейнер с текстом под изображениями товаров */
.product__info {
    font-family: "Poppins", sans-serif;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    gap: 8px;
}
/* Название */
.product__title {
    font-size: 24px;
    color: var(--black-total);
    margin-right: 12px;
    line-height: 1.2;
}
/* Цена */
.product__price {
    font-size: 16px;
    color: var(--black-total);
    line-height: 1.5;
}

/* Секция с видео */
.video {
    display: flex;
    align-items: center;
    justify-content: center;
    max-width: 1125px;
    height: auto;
    overflow: hidden;
    border-radius: 12px;
    margin: 20px auto;
    position: relative;
}

.video__description {
    color:var(--white);
    font-family: "Poppins", sans-serif;
    line-height: 1.2;
    font-size: 24px;
    font-weight: 800;
    text-align: center;
    position: absolute;
    top: 10%;
    max-width: 40%;
}

.video__background {
    background-color: rgba(0, 0, 0, 0.6);
    width: 100%;
    height: 100%;
}

.video__overlay {
    position: absolute;
    top: 10%;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.video__play-button {
    background-color: var(--grey-white);
    border: none;
    border-radius: 50%;
    cursor: pointer;
    transition: background-color 1s, transform 2s;
    width: 105px;
    height: 105px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.video:hover .video__play-button {
    background-color: dimgray;
    transform: scale(1.05);
}

.video__play-button::after {
    content: '';
    width: 0;
    height: 0;
    border-top: 20px solid transparent;
    border-bottom: 20px solid transparent;
    border-left: 30px solid var(--white);
    margin-left: 8px;
}

/* Контейнер с производством для компаний и брендов */
.cooperation {
    background-color: var(--grey-total);
    max-width: 100%;
    margin: -7% auto;
}

.cooperation__intro {
    padding: 7% 7% 0 7%;
}

.cooperations {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 5px;
    max-width: 1125px;
    width: 100%;
    margin: 10px auto;
}

.cooperations__cart {
    text-align: center;
    padding: 5px;
    flex: 1 1 30%;
    max-width: 30%;
}

.cooperations__cart img {
    width: 100%;
    height: auto;
    object-fit: cover;
    border-radius: 6px;
    margin-bottom: 10px;
}

.cooperations__cart h3 {
    color: var(--black-total);
    font-family: "Poppins", sans-serif;
    line-height: 1.2;
    font-size: 20px;
    font-weight: 800;
    margin: 0 auto;
    max-width: 55%;
    text-align: center;
}

.cooperations__cart p {
    color: var(--black-total);
    font-family: "Inter", sans-serif;
    line-height: 1.5;
    font-size: 16px;
    font-weight: 400;
}

/* Контейнер со способами нанесения принтов и вышивки */
.prints-techniques {
    max-width: 1150px;
    margin: 10% auto 0 auto;
    padding: 20px;
}

.prints-techniques__content {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    justify-content: space-between;
}

.prints-techniques__content-cart {
    text-align: center;
    padding: 10px;
    flex: 1 1 calc(50% - 20px); /* Ширина: под 2 элемента в строке */
    box-sizing: border-box;
}

.prints-techniques__content-cart img {
    width: 100%;
    height: auto;
    border-radius: 6px;
    margin-bottom: 15px;
}

.prints-techniques__content-cart h3 {
    color: var(--black-total);
    font-family: "Poppins", sans-serif;
    line-height: 1.2;
    font-size: 20px;
    font-weight: 800;
    max-width: 100%;
    margin-bottom: 10px;
}

.prints-techniques__content-cart p {
    color: var(--black-total);
    font-family: "Inter", sans-serif;
    line-height: 1.5;
    font-size: 16px;
    font-weight: 400;
}

/* Контейнер с реализацией */
.realisation {
    position: relative;
    margin: 3% auto 0 auto;
    max-width: 1125px;
    height: auto;
    border-radius: 15px;
    background-image: url('3_3.png');
    background-repeat: no-repeat;
    background-position: left center;
    background-color: var(--black-half);
    z-index: 1;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 20px;
    box-sizing: border-box;
}

/* Второе изображение внутри контейнера сразу за первым */
.realisation::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    
    background-image: url('3_4.png');
    background-repeat: no-repeat;
    background-position: right center;
    background-color: var(--black-half);
    z-index: -1;
    border-radius: 15px;
}

.realisation__overlay {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    max-width: 738px;
    color: var(--white);
    margin: auto;
}
/* ... */

